[gd_scene load_steps=16 format=3 uid="uid://c8q6wa4cofe21"]

[ext_resource type="Script" path="res://scripts/modules/traps/falling_trap_tgt.gd" id="1_4m5pv"]
[ext_resource type="PackedScene" uid="uid://b2scf0mf7s0y1" path="res://scenes/modules/kill_zone.tscn" id="3_1gqju"]
[ext_resource type="Texture2D" uid="uid://dy8a8ar6qlsno" path="res://assets/sprites/像素火焰1.0.png" id="3_8s65a"]
[ext_resource type="AudioStream" uid="uid://bguhgybwm1ifa" path="res://assets/sounds/traps/Spell_04.wav" id="4_cojqg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_emold"]
atlas = ExtResource("3_8s65a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_052n0"]
atlas = ExtResource("3_8s65a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_16mlr"]
atlas = ExtResource("3_8s65a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8qxt"]
atlas = ExtResource("3_8s65a")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbwuv"]
atlas = ExtResource("3_8s65a")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_trp8c"]
atlas = ExtResource("3_8s65a")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_42abj"]
atlas = ExtResource("3_8s65a")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wo16"]
atlas = ExtResource("3_8s65a")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rhn5"]
atlas = ExtResource("3_8s65a")
region = Rect2(64, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7bjxk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_emold")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_052n0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_16mlr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8qxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbwuv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trp8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42abj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wo16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rhn5")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0qlj"]
radius = 12.0

[node name="FallingTrapTgt" type="Area2D"]
collision_mask = 128
script = ExtResource("1_4m5pv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_7bjxk")
frame_progress = 0.872945

[node name="kill_zone" parent="." instance=ExtResource("3_1gqju")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="kill_zone"]
position = Vector2(-1, 9)
shape = SubResource("CircleShape2D_w0qlj")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_cojqg")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
